--- a/site4/animation.html
+++ b/site4/animation.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Sarabun:400,700" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<!--<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Sarabun:400,700" rel="stylesheet"> -->
+	<link rel="stylesheet" type="text/css" href="animation.css">
 	<title>My Website</title>
 </head>
 <body>
 
 <h1 id="title">My Website</h1>
 
-<p class="para-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua.</p>
+<p class="para-text">The pain itself is important, but the pain is enhanced by the adipiscing process, but I give it time to cut it down so that I do some great work and pain.</p>
 
 <h2 class="subtitle" id="about-me">About Me</h2>
 
-<img src="../img/img-1.jpg" id="about-us-image">
+<img src="https://tse4.mm.bing.net/th?id=OIP.Sgs3Xw673xFLnE59pprVUQHaEK&pid=Api&P=0&w=337&h=190" id="about-us-image">
 
-<p class="para-text">Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-<span class="italics">Lorem ipsum dolor sit amet</span>, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. 
-
-Cillum dolore eu fugiat nulla , pariatur:
-
+<p class="para-text">But the pain in the film is irure to condemn, in the pleasure it wants to escape from the pain of being clum in pain, none result. They are the exceptions the blinds yearn for, they don't see, they are the ones who abandon their responsibilities to the fault that is soothing the soul's hardships.
+<span class="italics">Lorem ipsum dolor sit amet</span>, The pain itself is important , but I give it to the pain of some great pain. For the purpose of coming to a minimum, who of ours should exercise any employment except to take advantage of the consequences from it. Let no cholesterol escape from the pain of the cilium, resultant:
 	<ul>
-		<li class="list-item">Excepteur sint occaecat</li>
+		<li class="list-item">Exception are blacks</li>
 		<ol>
 			<li class="list-item">My numbered list item</li>
 		</ol>
@@ -37,26 +27,26 @@ Cillum dolore eu fugiat nulla , pariatur:
 
 <h2 class="subtitle">Services</h2>
 
-<a href="http://www.google.com" class="link">Click here to go to Google</a>
+<!--<a href="http://www.google.com" class="link">Click here to go to Google</a> -->
 
 <table border="1" class="site-table">
 	<thead>
 		<tr>
-			<td>Lorem</td>
-			<td>Ipsum</td>
-			<td>Dolor</td>
+			<td>Thank you</td>
+			<td>Very</td>
+			<td>pain</td>
 		</tr>
 	</thead>
 	<tbody>
 		<tr>
-			<td>Sit</td>
+			<td>let it be</td>
 			<td>Amet</td>
-			<td>Consectetur</td>
+			<td>enhanced</td>
 		</tr>
 		<tr>
-			<td>Adipisicing</td>
+			<td>rebates</td>
 			<td>Elit</td>
-			<td>Sed</td>
+			<td>but</td>
 		</tr>
 		
 	</tbody>
