--- a/site4/css1.html
+++ b/site4/css1.html
@@ -3,6 +3,7 @@
 		<head>
 		<meta charset= "utf-8">
 		<title>His Holiness The Dalai Lama</title>
+		<link href="https://fonts.googleapis.com/css2?family=Joan&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="first.css">
 		</head>			
 		<body>
