commiting all changes.

--- a/site4/specificity.html
+++ b/site4/specificity.html
@@ -1,26 +1,17 @@
-  <!doctype html>
+<!doctype html>
 	<html lang= "en">
 		<head>
 		<meta charset= "utf-8">
 		<title>inheritence in css</title>
-		<link rel="stylesheet" href="style.css">
 		<style>
-		body 
-		{
-			color:red;
-			text-align:center;
-			font-family:helvetica;
-			background-color:50%;
-		}
-			p{
-				color:yellow;
-				
-			}
-		</style>
 
-		</head>			
-		<body>
-				<h1>Style Placements </h1>
+
+		</style>
+			
+
+
+			<body>
+			<h1>Style Placements </h1>
 				<h1>Subheading 1 </h1>
 			
 		
@@ -29,5 +20,4 @@
 				<p style="color:black;"> there is no conflict,declaration merge into one rule </p>
 				</body>
 		</html>
-			
-		
+		</body>
