commiting all changes.

--- a/site4/css1.html
+++ b/site4/css1.html
@@ -36,6 +36,14 @@
 					align-self:flex-start;
 					 ">E</div>
 					</div>
+
+				<div class="grid-container">
+					<div class="grid-item" input type="circle" style="background: rgb(97, 135, 96);">1</div>
+					<div class="grid-item" style="background: rgb(50, 145, 200);">2</div>
+					<div class="grid-item" style="background: rgb(44, 112, 43);">3</div>
+					<div class="grid-item" style="background: rgb(112, 43, 95);">4</div>
+					<div class="grid-item" style="background: rgb(43, 103, 112);">5</div>
+					</div>
 				<div id="service-image"> </div>
 
 		</body>
